# CPlusPlus_Examples

./: CMakeLists.txt  README.md
01-GuessGame/: guess_game.cpp
02-Calculator/: main.cpp
04-ClassPerson/: main.cpp
06-Lambda/: main.cpp
09-TetrisGame/: Makefile  tetris.cpp
10-Strategy_Pattern/: strategy.cpp
11-State_Pattern/: state.cpp
12-AbstractFactory_Pattern/: abstract_factory.cpp
13-Factory_Pattern/: factory.cpp
14-Singleton_Pattern/: singleton.cpp
17-ReferenceAsParameter/: main.cpp
20-FileStreams/: main.cpp
21-DivisionException/: main.cpp
22-CreateExceptionClass/: main.cpp
25-Namespace/: main.cpp
26-Lambda_Thread/: thread_lambda.cpp
27-Composite_Pattern/: main.cpp
29-Factory_Pattern/: main.cpp
Design-Patterns/: README.md  builder.cpp
Examples/: README.md  exception.cpp  fileio.cpp  friendclass.cpp  function.cpp  log.cpp  operator_overload.cpp  overloading.cpp  reference.cpp  referenceasreturn.cpp  signal.cpp  template.cpp
Games/: README.md  battle.cpp  guess.cpp
Games/SFML_HelloWorld/: Makefile
OOP/: README.md  interface.cpp  polymorphism.cpp
